website/websites/u64q/code/threadring.1.scala.log

Sat, 19 Jun 2010 02:50:01 GMT

MAKE:
mv threadring.scala threadring.scala
mv: `threadring.scala' and `threadring.scala' are the same file
make: [threadring.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.8.0.RC6/bin/scalac threadring.scala
threadring.scala:11: error: not found: type int
    class Thread(_label: int) extends Actor {
                         ^
threadring.scala:21: error: not found: type int
                        case (n: int) => {
                                 ^
two errors found
make: [threadring.scala_run] Error 1 (ignored)
3.82s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar threadring 500000

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: threadring
Caused by: java.lang.ClassNotFoundException: threadring
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: threadring.  Program will exit.
